// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PolicyServerView > Storybook snapshots > renders the busy state 1`] = `
<div>
  <div
    style="width: 560px;"
  >
    <form
      class="_root_1o4d9_17 PolicyServerView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
          Policy server name
        </label>
        <input
          autocomplete="off"
          class="_control_d83jn_10"
          disabled=""
          id="radix-react-use-id-1"
          name="policyServerName"
          placeholder="policy.example.org"
          spellcheck="false"
          title=""
          value="policy.example.org"
        />
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <button
          aria-disabled="true"
          class="_button_1nw83_8"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
        <svg
          aria-label="Loading…"
          class="_icon_1855a_18"
          fill="currentColor"
          height="1em"
          style="width: 20px; height: 20px;"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12 4.031a8 8 0 1 0 8 8 1 1 0 0 1 2 0c0 5.523-4.477 10-10 10s-10-4.477-10-10 4.477-10 10-10a1 1 0 1 1 0 2"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </form>
  </div>
</div>
`;

exports[`PolicyServerView > Storybook snapshots > renders the configured state with a support page 1`] = `
<div>
  <div
    style="width: 560px;"
  >
    <form
      class="_root_1o4d9_17 PolicyServerView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
          Policy server name
        </label>
        <input
          autocomplete="off"
          class="_control_d83jn_10"
          id="radix-react-use-id-1"
          name="policyServerName"
          placeholder="policy.example.org"
          spellcheck="false"
          title=""
          value="policy.example.org"
        />
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <button
          aria-disabled="true"
          class="_button_1nw83_8"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
      <p
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 PolicyServerView-module_support"
      >
        <span>
          This policy server may need additional setup before it works. See the 
          <a
            class="_link_13esb_8"
            data-kind="primary"
            data-size="md"
            href="https://policy.example.org/support"
            rel="noreferrer noopener"
            target="_blank"
          >
            policy server's support page
          </a>
           for details.
        </span>
      </p>
    </form>
  </div>
</div>
`;

exports[`PolicyServerView > Storybook snapshots > renders the legacy configuration state 1`] = `
<div>
  <div
    style="width: 560px;"
  >
    <form
      class="_root_1o4d9_17 PolicyServerView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
          Policy server name
        </label>
        <input
          aria-describedby="radix-react-use-id-2"
          autocomplete="off"
          class="_control_d83jn_10"
          id="radix-react-use-id-1"
          name="policyServerName"
          placeholder="policy.example.org"
          spellcheck="false"
          title=""
          value="policy.example.org"
        />
        <span
          class="_message_1o4d9_86 _help-message_1o4d9_92"
          id="radix-react-use-id-2"
        >
          This room's policy server was set up with a pre-release version of this setting. Apply it again to update the configuration.
        </span>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <button
          aria-disabled="false"
          class="_button_1nw83_8"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
      <p
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 PolicyServerView-module_support"
      >
        This policy server may need additional setup before it works. Check its documentation for details.
      </p>
    </form>
  </div>
</div>
`;

exports[`PolicyServerView > Storybook snapshots > renders the lookup failure state 1`] = `
<div>
  <div
    style="width: 560px;"
  >
    <form
      class="_root_1o4d9_17 PolicyServerView-module_form"
    >
      <div
        class="_field_1o4d9_27"
        data-invalid="true"
      >
        <label
          class="_label_1o4d9_60"
          data-invalid="true"
          for="radix-react-use-id-1"
        >
          Policy server name
        </label>
        <input
          aria-describedby="radix-react-use-id-2"
          aria-invalid="true"
          autocomplete="off"
          class="_control_d83jn_10"
          data-invalid="true"
          id="radix-react-use-id-1"
          name="policyServerName"
          placeholder="policy.example.org"
          spellcheck="false"
          title=""
          value="not-a-policy-server.example.org"
        />
        <span
          class="_message_1o4d9_86 _error-message_1o4d9_96"
          id="radix-react-use-id-2"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 17q.424 0 .713-.288A.97.97 0 0 0 13 16a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 15a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 16q0 .424.287.712.288.288.713.288m0-4q.424 0 .713-.287A.97.97 0 0 0 13 12V8a.97.97 0 0 0-.287-.713A.97.97 0 0 0 12 7a.97.97 0 0 0-.713.287A.97.97 0 0 0 11 8v4q0 .424.287.713.288.287.713.287m0 9a9.7 9.7 0 0 1-3.9-.788 10.1 10.1 0 0 1-3.175-2.137q-1.35-1.35-2.137-3.175A9.7 9.7 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22"
            />
          </svg>
          Could not find a policy server at this server name. Check the name and try again.
        </span>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <button
          aria-disabled="false"
          class="_button_1nw83_8"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`PolicyServerView > Storybook snapshots > renders the read-only state 1`] = `
<div>
  <div
    style="width: 560px;"
  >
    <form
      class="_root_1o4d9_17 PolicyServerView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
          Policy server name
        </label>
        <input
          autocomplete="off"
          class="_control_d83jn_10"
          disabled=""
          id="radix-react-use-id-1"
          name="policyServerName"
          placeholder="policy.example.org"
          spellcheck="false"
          title=""
          value="policy.example.org"
        />
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <button
          aria-disabled="true"
          class="_button_1nw83_8"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
      <p
        class="_typography_6v6n8_153 _font-body-sm-regular_6v6n8_31 PolicyServerView-module_support"
      >
        This policy server may need additional setup before it works. Check its documentation for details.
      </p>
    </form>
  </div>
</div>
`;

exports[`PolicyServerView > Storybook snapshots > renders the unconfigured state 1`] = `
<div>
  <div
    style="width: 560px;"
  >
    <form
      class="_root_1o4d9_17 PolicyServerView-module_form"
    >
      <div
        class="_field_1o4d9_27"
      >
        <label
          class="_label_1o4d9_60"
          for="radix-react-use-id-1"
        >
          Policy server name
        </label>
        <input
          autocomplete="off"
          class="_control_d83jn_10"
          id="radix-react-use-id-1"
          name="policyServerName"
          placeholder="policy.example.org"
          spellcheck="false"
          title=""
          value=""
        />
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
      >
        <button
          aria-disabled="true"
          class="_button_1nw83_8"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
          type="submit"
        >
          Apply
        </button>
      </div>
    </form>
  </div>
</div>
`;
